Fix layout and click-behaviour in Pyramid and TriPeaks by collapsing empty pile views
Since empty pile views (other than those at the pyramid root/peak) now collapse, there is no need for the old broken code to redirect the clicks, and with that not needed, the entire _PyramidLayout becomes obsolete.

--- a/code/cards.css
+++ b/code/cards.css
@@ -57,6 +57,8 @@ halfpilespacer {
 
 .pyramid > * { margin-bottom: -60px; }
 .pyramid { padding-bottom: 60px; }
+/* this *does* pass clicks through to other elements, thankfully */
+.pyramid-collapse { visibility: hidden; }
 
 /* for card <image>s */
 .hidden { display: none }
